// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`annee as full date should import annee correctly 1`] = `
Array [
  Object {
    "annee": 1937,
    "civilite": "F",
    "code_postal": 62130,
    "date_ouverture": "2011-11-03",
    "numero_dossier": "A/0000001",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Gouy_servins",
  },
  Object {
    "annee": 1975,
    "civilite": "H",
    "code_postal": 62000,
    "date_ouverture": "2012-12-09",
    "numero_dossier": "A/0000002",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "fouquieres_les_lens",
  },
  Object {
    "annee": 1986,
    "civilite": "F",
    "code_postal": 69876,
    "date_ouverture": "2011-03-30",
    "numero_dossier": "A/0000003",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Montigny",
  },
]
`;

exports[`annee as full date should import annee correctly 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`clean normalize input 1`] = `
Array [
  Object {
    "annee": 4150,
    "civilite": "n",
    "code_postal": 57100,
    "date_ouverture": "2017-11-02",
    "numero_dossier": "RG20136Q",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "thionville",
  },
  Object {
    "annee": 4000,
    "civilite": "n",
    "code_postal": 75005,
    "date_ouverture": "2016-12-03",
    "numero_dossier": "1236HPLY",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "paris",
  },
  Object {
    "annee": 4500,
    "civilite": "n",
    "code_postal": 85000,
    "date_ouverture": "2010-08-05",
    "numero_dossier": "meourg120",
    "residence": "A Domicile",
    "type": "Sauvegarde de justice",
    "ville": "marseille",
  },
]
`;

exports[`empty dates naissance should set empty dates naissance to null 1`] = `
Array [
  Object {
    "annee": 1936,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1972-12-19",
    "numero_dossier": "AAAA1",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": null,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1972-11-16",
    "numero_dossier": "AAAA2",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1932,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2018-07-12",
    "numero_dossier": "AAAA3",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1950,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "2000-06-14",
    "numero_dossier": "AAAA4",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": null,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "2007-09-12",
    "numero_dossier": "AAAA5",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1936,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1981-11-19",
    "numero_dossier": "AAAA6",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1948,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2008-06-20",
    "numero_dossier": "AAAA7",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1935,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1973-01-25",
    "numero_dossier": "AAAA8",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1952,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "1987-06-10",
    "numero_dossier": "AAAA9",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": null,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1976-02-10",
    "numero_dossier": "AAAA10",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1947,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1978-04-27",
    "numero_dossier": "AAAA11",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
]
`;

exports[`empty dates naissance should set empty dates naissance to null 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`fix various invalid data 1 should import correctly 1`] = `
Array [
  Object {
    "annee": 1939,
    "civilite": "F",
    "code_postal": 33720,
    "date_ouverture": "2017-01-26",
    "numero_dossier": "D/1/2/3",
    "residence": "En établissement avec conservation du domicile",
    "type": "Curatelle",
    "ville": "Illats",
  },
  Object {
    "annee": 1956,
    "civilite": "H",
    "code_postal": 94500,
    "date_ouverture": "2018-04-26",
    "numero_dossier": "D/1/2/4",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Champigny",
  },
  Object {
    "annee": 1963,
    "civilite": "H",
    "code_postal": 94500,
    "date_ouverture": "2018-08-03",
    "numero_dossier": "D/1/2/5",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Champigny",
  },
  Object {
    "annee": 1953,
    "civilite": "H",
    "code_postal": 94140,
    "date_ouverture": "2018-06-06",
    "numero_dossier": "D/1/2/6",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Alfortville",
  },
  Object {
    "annee": 1933,
    "civilite": "H",
    "code_postal": 94130,
    "date_ouverture": "2018-04-19",
    "numero_dossier": "D/1/2/7",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "Nogent",
  },
  Object {
    "annee": 1934,
    "civilite": "F",
    "code_postal": 94130,
    "date_ouverture": "2018-04-19",
    "numero_dossier": "D/1/2/8",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "Nogent",
  },
  Object {
    "annee": 1944,
    "civilite": "H",
    "code_postal": 942600,
    "date_ouverture": "2018-09-13",
    "numero_dossier": "D/1/2/9",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Fresnes",
  },
  Object {
    "annee": 1925,
    "civilite": "H",
    "code_postal": 94500,
    "date_ouverture": "2016-12-15",
    "numero_dossier": "D/1/2/10",
    "residence": "En établissement avec conservation du domicile",
    "type": "Curatelle",
    "ville": "Champigny",
  },
  Object {
    "annee": 1973,
    "civilite": "H",
    "code_postal": 94510,
    "date_ouverture": "2017-12-13",
    "numero_dossier": "D/1/2/11",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "La Queue en Brie",
  },
  Object {
    "annee": 1968,
    "civilite": "H",
    "code_postal": 27300,
    "date_ouverture": "2016-06-06",
    "numero_dossier": "D/1/2/12",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Bernay",
  },
  Object {
    "annee": 1923,
    "civilite": "H",
    "code_postal": 94130,
    "date_ouverture": "2017-02-03",
    "numero_dossier": "D/1/2/13",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Nogent",
  },
  Object {
    "annee": 1941,
    "civilite": "H",
    "code_postal": 94240,
    "date_ouverture": "2017-01-26",
    "numero_dossier": "D/1/2/14",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "L'Hay les Roses",
  },
  Object {
    "annee": 1937,
    "civilite": "F",
    "code_postal": 94120,
    "date_ouverture": "2017-01-31",
    "numero_dossier": "D/1/2/15",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Fontenay",
  },
  Object {
    "annee": 1977,
    "civilite": "H",
    "code_postal": 85180,
    "date_ouverture": "2017-11-23",
    "numero_dossier": "D/1/2/16",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Château Olonnes",
  },
  Object {
    "annee": 1971,
    "civilite": "F",
    "code_postal": 94230,
    "date_ouverture": "2016-09-22",
    "numero_dossier": "D/1/2/17",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Cachan",
  },
  Object {
    "annee": 1926,
    "civilite": "F",
    "code_postal": 94800,
    "date_ouverture": "2018-11-06",
    "numero_dossier": "D/1/2/18",
    "residence": "En établissement avec conservation du domicile",
    "type": "Tutelle",
    "ville": "Villejuif",
  },
  Object {
    "annee": 1966,
    "civilite": "H",
    "code_postal": 94390,
    "date_ouverture": "2016-06-14",
    "numero_dossier": "D/1/2/19",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Orly",
  },
  Object {
    "annee": 1940,
    "civilite": "H",
    "code_postal": 94250,
    "date_ouverture": "2018-02-01",
    "numero_dossier": "D/1/2/20",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Gentilly",
  },
  Object {
    "annee": 1952,
    "civilite": "H",
    "code_postal": 94250,
    "date_ouverture": "2016-10-28",
    "numero_dossier": "D/1/2/21",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Gentilly",
  },
  Object {
    "annee": 1959,
    "civilite": "F",
    "code_postal": 94120,
    "date_ouverture": "2018-11-13",
    "numero_dossier": "D/1/2/22",
    "residence": "A Domicile",
    "type": "Sauvegarde de justice",
    "ville": "Fontenay",
  },
  Object {
    "annee": 1960,
    "civilite": "H",
    "code_postal": 94450,
    "date_ouverture": "2016-08-01",
    "numero_dossier": "D/1/2/23",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Chevilly la Rue",
  },
  Object {
    "annee": 1933,
    "civilite": "F",
    "code_postal": 94300,
    "date_ouverture": "2017-02-10",
    "numero_dossier": "D/1/2/24",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Vincennes",
  },
  Object {
    "annee": 1943,
    "civilite": "F",
    "code_postal": 94500,
    "date_ouverture": "2016-07-25",
    "numero_dossier": "D/1/2/25",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Champigny",
  },
  Object {
    "annee": 1951,
    "civilite": "H",
    "code_postal": 91290,
    "date_ouverture": "2018-10-23",
    "numero_dossier": "D/1/2/26",
    "residence": "En établissement avec conservation du domicile",
    "type": "Curatelle",
    "ville": "Arpajon",
  },
  Object {
    "annee": 1930,
    "civilite": "F",
    "code_postal": 94120,
    "date_ouverture": "2018-05-29",
    "numero_dossier": "D/1/2/27",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "Fontenay",
  },
  Object {
    "annee": 1953,
    "civilite": "F",
    "code_postal": 94500,
    "date_ouverture": "2017-02-23",
    "numero_dossier": "D/1/2/28",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Champigny",
  },
  Object {
    "annee": 1965,
    "civilite": "H",
    "code_postal": 94250,
    "date_ouverture": "2017-07-04",
    "numero_dossier": "D/1/2/29",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Gentilly",
  },
  Object {
    "annee": 1959,
    "civilite": "H",
    "code_postal": 94400,
    "date_ouverture": "2017-09-17",
    "numero_dossier": "D/1/2/30",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Vitry sur Seine",
  },
  Object {
    "annee": 1936,
    "civilite": "F",
    "code_postal": 94240,
    "date_ouverture": "2016-10-20",
    "numero_dossier": "D/1/2/31",
    "residence": "En établissement avec conservation du domicile",
    "type": "Tutelle",
    "ville": "L'Hay les Roses",
  },
  Object {
    "annee": 1981,
    "civilite": "H",
    "code_postal": 94800,
    "date_ouverture": "2018-09-25",
    "numero_dossier": "D/1/2/32",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Villejuif",
  },
  Object {
    "annee": 1932,
    "civilite": "H",
    "code_postal": 94800,
    "date_ouverture": "2016-10-11",
    "numero_dossier": "D/1/2/33",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Villejuif",
  },
  Object {
    "annee": 1959,
    "civilite": "H",
    "code_postal": 94300,
    "date_ouverture": "2016-07-29",
    "numero_dossier": "D/1/2/34",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Vincennes",
  },
  Object {
    "annee": 1928,
    "civilite": "F",
    "code_postal": 94800,
    "date_ouverture": "2018-07-16",
    "numero_dossier": "D/1/2/35",
    "residence": "En établissement avec conservation du domicile",
    "type": "Tutelle",
    "ville": "Villejuif",
  },
  Object {
    "annee": 1965,
    "civilite": "F",
    "code_postal": 94270,
    "date_ouverture": "2017-09-14",
    "numero_dossier": "D/1/2/36",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Kremlin Bicetre",
  },
  Object {
    "annee": 1947,
    "civilite": "F",
    "code_postal": 94240,
    "date_ouverture": "2018-06-01",
    "numero_dossier": "D/1/2/37",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "L'Hay les Roses",
  },
  Object {
    "annee": 1955,
    "civilite": "H",
    "code_postal": 94300,
    "date_ouverture": "2017-01-31",
    "numero_dossier": "D/1/2/38",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Vincennes",
  },
  Object {
    "annee": 1932,
    "civilite": "F",
    "code_postal": 94230,
    "date_ouverture": "2018-12-28",
    "numero_dossier": "D/1/2/39",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Cachan",
  },
  Object {
    "annee": 1958,
    "civilite": "H",
    "code_postal": 94550,
    "date_ouverture": "2017-05-23",
    "numero_dossier": "D/1/2/40",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Chevilly la Rue",
  },
  Object {
    "annee": 1928,
    "civilite": "F",
    "code_postal": 94230,
    "date_ouverture": "2017-07-28",
    "numero_dossier": "D/1/2/41",
    "residence": "En établissement avec conservation du domicile",
    "type": "Curatelle",
    "ville": "Cachan",
  },
  Object {
    "annee": 1943,
    "civilite": "H",
    "code_postal": 24120,
    "date_ouverture": "2016-07-05",
    "numero_dossier": "D/1/2/42",
    "residence": "En établissement avec conservation du domicile",
    "type": "Curatelle",
    "ville": "Terrasson",
  },
  Object {
    "annee": 1947,
    "civilite": "H",
    "code_postal": 94800,
    "date_ouverture": "2018-08-30",
    "numero_dossier": "D/1/2/43",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Villejuif",
  },
  Object {
    "annee": 1938,
    "civilite": "F",
    "code_postal": 94170,
    "date_ouverture": "2017-03-02",
    "numero_dossier": "D/1/2/44",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Le Perreux",
  },
  Object {
    "annee": 1933,
    "civilite": "F",
    "code_postal": 94160,
    "date_ouverture": "2018-04-24",
    "numero_dossier": "D/1/2/45",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Saint Mandé",
  },
  Object {
    "annee": 1935,
    "civilite": "F",
    "code_postal": 94800,
    "date_ouverture": "2018-01-23",
    "numero_dossier": "D/1/2/46",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Villejuif",
  },
  Object {
    "annee": 1957,
    "civilite": "F",
    "code_postal": 94550,
    "date_ouverture": "2018-06-07",
    "numero_dossier": "D/1/2/47",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Chevilly la Rue",
  },
  Object {
    "annee": 1957,
    "civilite": "H",
    "code_postal": 94120,
    "date_ouverture": "2018-04-03",
    "numero_dossier": "D/1/2/48",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Fontenay",
  },
  Object {
    "annee": 1929,
    "civilite": "F",
    "code_postal": 94400,
    "date_ouverture": "2017-09-26",
    "numero_dossier": "D/1/2/49",
    "residence": "En établissement avec conservation du domicile",
    "type": "Curatelle",
    "ville": "Vitry sur Seine",
  },
  Object {
    "annee": 1931,
    "civilite": "F",
    "code_postal": 94240,
    "date_ouverture": "2018-09-28",
    "numero_dossier": "D/1/2/50",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "L'Hay les Roses",
  },
  Object {
    "annee": 1921,
    "civilite": "F",
    "code_postal": 92000,
    "date_ouverture": "2017-09-27",
    "numero_dossier": "D/1/2/51",
    "residence": "En établissement avec conservation du domicile",
    "type": "Tutelle",
    "ville": "Nanterre",
  },
  Object {
    "annee": 1927,
    "civilite": "F",
    "code_postal": 95160,
    "date_ouverture": "2016-09-27",
    "numero_dossier": "D/1/2/52",
    "residence": "En établissement avec conservation du domicile",
    "type": "Tutelle",
    "ville": "Montmorency",
  },
  Object {
    "annee": 1939,
    "civilite": "H",
    "code_postal": 94250,
    "date_ouverture": "2017-11-28",
    "numero_dossier": "D/1/2/53",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Gentilly",
  },
  Object {
    "annee": 1940,
    "civilite": "H",
    "code_postal": 94230,
    "date_ouverture": "2016-09-20",
    "numero_dossier": "D/1/2/54",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "Cachan",
  },
  Object {
    "annee": 1954,
    "civilite": "F",
    "code_postal": 93210,
    "date_ouverture": "2018-03-20",
    "numero_dossier": "D/1/2/55",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Saint Denis",
  },
  Object {
    "annee": 1924,
    "civilite": "F",
    "code_postal": 94230,
    "date_ouverture": "2016-12-29",
    "numero_dossier": "D/1/2/56",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "Cachan",
  },
  Object {
    "annee": 1924,
    "civilite": "F",
    "code_postal": 94230,
    "date_ouverture": "2018-11-06",
    "numero_dossier": "D/1/2/57",
    "residence": "En établissement avec conservation du domicile",
    "type": "Curatelle",
    "ville": "Cachan",
  },
]
`;

exports[`fix various invalid data 1 should import correctly 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`fix various invalid data 1.2 should import correctly 1`] = `
Array [
  Object {
    "annee": 1926,
    "civilite": "H",
    "code_postal": 59170,
    "date_ouverture": "2019-01-28",
    "numero_dossier": "18/000001-ABC1",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "CROIX",
  },
  Object {
    "annee": 1991,
    "civilite": "F",
    "code_postal": 59200,
    "date_ouverture": "2019-01-14",
    "numero_dossier": "18/000001-ABC2",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "TOURCOING",
  },
  Object {
    "annee": 1931,
    "civilite": "F",
    "code_postal": 59700,
    "date_ouverture": "2019-03-04",
    "numero_dossier": "18/000001-ABC3",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "MARCQ EN BAROEUL",
  },
  Object {
    "annee": 1956,
    "civilite": "H",
    "code_postal": 59700,
    "date_ouverture": "2019-01-14",
    "numero_dossier": "18/000001-ABC4",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "MARCQ EN BAROEUL",
  },
  Object {
    "annee": 1945,
    "civilite": "H",
    "code_postal": 59100,
    "date_ouverture": "2018-03-26",
    "numero_dossier": "18/000001-ABC5",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "ROUBAIX",
  },
  Object {
    "annee": 1965,
    "civilite": "H",
    "code_postal": 59700,
    "date_ouverture": "2018-11-26",
    "numero_dossier": "18/000001-ABC6",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "MARCQ EN BAROEUL",
  },
  Object {
    "annee": 1948,
    "civilite": "F",
    "code_postal": 59700,
    "date_ouverture": "2018-11-05",
    "numero_dossier": "18/000001-ABC7",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "MARCQ EN BAROEUL",
  },
  Object {
    "annee": 1934,
    "civilite": "F",
    "code_postal": 59290,
    "date_ouverture": "2018-05-17",
    "numero_dossier": "18/000001-ABC8",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "WASQUEHAL",
  },
  Object {
    "annee": 1933,
    "civilite": "F",
    "code_postal": 59200,
    "date_ouverture": "2019-02-06",
    "numero_dossier": "18/000001-ABC9",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "TOURCOING",
  },
  Object {
    "annee": 1940,
    "civilite": "H",
    "code_postal": 59100,
    "date_ouverture": "2018-09-27",
    "numero_dossier": "18/000001-ABC10",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "ROUBAIX",
  },
  Object {
    "annee": 1979,
    "civilite": "H",
    "code_postal": 59200,
    "date_ouverture": "2018-05-28",
    "numero_dossier": "18/000001-ABC11",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "TOURCOING",
  },
  Object {
    "annee": 1957,
    "civilite": "H",
    "code_postal": 59200,
    "date_ouverture": "2018-06-25",
    "numero_dossier": "18/000001-ABC12",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "TOURCOING",
  },
  Object {
    "annee": 1960,
    "civilite": "H",
    "code_postal": 59100,
    "date_ouverture": "2019-01-28",
    "numero_dossier": "18/000001-ABC13",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "ROUBAIX",
  },
  Object {
    "annee": 1924,
    "civilite": "F",
    "code_postal": 59960,
    "date_ouverture": "2018-03-01",
    "numero_dossier": "18/000001-ABC14",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "NEUVILLE EN FERRAIN",
  },
  Object {
    "annee": 1948,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2018-09-20",
    "numero_dossier": "18/000001-ABC15",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "ROUBAIX",
  },
  Object {
    "annee": 1933,
    "civilite": "F",
    "code_postal": 59700,
    "date_ouverture": "2018-12-04",
    "numero_dossier": "18/000001-ABC16",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "MARCQ EN BAROEUL",
  },
  Object {
    "annee": 1962,
    "civilite": "F",
    "code_postal": 59150,
    "date_ouverture": "2018-09-20",
    "numero_dossier": "18/000001-ABC17",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "WATTRELOS",
  },
  Object {
    "annee": 1951,
    "civilite": "H",
    "code_postal": 59150,
    "date_ouverture": "2018-06-05",
    "numero_dossier": "18/000001-ABC18",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "WATTRELOS",
  },
  Object {
    "annee": 1951,
    "civilite": "F",
    "code_postal": 59150,
    "date_ouverture": "2018-09-10",
    "numero_dossier": "18/000001-ABC19",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "WATTRELOS",
  },
  Object {
    "annee": 1940,
    "civilite": "H",
    "code_postal": 59700,
    "date_ouverture": "2018-06-06",
    "numero_dossier": "18/000001-ABC20",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "MARCQ EN BAROEUL",
  },
  Object {
    "annee": 1949,
    "civilite": "F",
    "code_postal": 59200,
    "date_ouverture": "2018-12-21",
    "numero_dossier": "18/000001-ABC21",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "TOURCOING",
  },
  Object {
    "annee": 1977,
    "civilite": "H",
    "code_postal": 59200,
    "date_ouverture": "2018-09-05",
    "numero_dossier": "18/000001-ABC22",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "TOURCOING",
  },
  Object {
    "annee": 1955,
    "civilite": "F",
    "code_postal": 59170,
    "date_ouverture": "2018-06-28",
    "numero_dossier": "18/000001-ABC23",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "CROIX",
  },
  Object {
    "annee": 1927,
    "civilite": "F",
    "code_postal": 59290,
    "date_ouverture": "2018-06-25",
    "numero_dossier": "18/000001-ABC24",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "WASQUEHAL",
  },
  Object {
    "annee": 1932,
    "civilite": "F",
    "code_postal": 59150,
    "date_ouverture": "2019-03-14",
    "numero_dossier": "18/000001-ABC25",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "WATTRELOS",
  },
  Object {
    "annee": 1947,
    "civilite": "F",
    "code_postal": 59200,
    "date_ouverture": "2018-12-04",
    "numero_dossier": "18/000001-ABC26",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "TOURCOING",
  },
  Object {
    "annee": 1976,
    "civilite": "F",
    "code_postal": 59200,
    "date_ouverture": "2018-06-05",
    "numero_dossier": "18/000001-ABC27",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "TOURCOING",
  },
]
`;

exports[`fix various invalid data 1.2 should import correctly 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`fix various invalid data 1.3 should import correctly 1`] = `
Array [
  Object {
    "annee": 1934,
    "civilite": "F",
    "code_postal": 59283,
    "date_ouverture": "2018-11-29",
    "numero_dossier": "1234/R1",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "RAIMBEAUCOURT",
  },
  Object {
    "annee": 1925,
    "civilite": "F",
    "code_postal": 59178,
    "date_ouverture": "2018-01-30",
    "numero_dossier": "1234/R2",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "HASNON",
  },
  Object {
    "annee": 1960,
    "civilite": "H",
    "code_postal": 59165,
    "date_ouverture": "2018-12-20",
    "numero_dossier": "1234/R3",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "AUBERCHICOURT",
  },
  Object {
    "annee": 1973,
    "civilite": "H",
    "code_postal": 59500,
    "date_ouverture": "2018-09-20",
    "numero_dossier": "1234/R4",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "DOUAI",
  },
  Object {
    "annee": 1945,
    "civilite": "F",
    "code_postal": 59167,
    "date_ouverture": "2016-10-26",
    "numero_dossier": "1234/R5",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "LALLAING",
  },
  Object {
    "annee": 1937,
    "civilite": "F",
    "code_postal": 59171,
    "date_ouverture": "2018-07-17",
    "numero_dossier": "1234/R6",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "HORNAING",
  },
  Object {
    "annee": 1965,
    "civilite": "F",
    "code_postal": 59500,
    "date_ouverture": "2015-06-24",
    "numero_dossier": "1234/R7",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "DOUAI",
  },
  Object {
    "annee": 1934,
    "civilite": "F",
    "code_postal": 59490,
    "date_ouverture": "2017-11-23",
    "numero_dossier": "1234/R8",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "SOMAIN",
  },
  Object {
    "annee": 1969,
    "civilite": "F",
    "code_postal": 59146,
    "date_ouverture": "2018-06-19",
    "numero_dossier": "1234/R9",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "PECQUENCOURT",
  },
  Object {
    "annee": 1968,
    "civilite": "F",
    "code_postal": 59500,
    "date_ouverture": "2018-04-19",
    "numero_dossier": "1234/R10",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "DOUAI",
  },
  Object {
    "annee": 1934,
    "civilite": "F",
    "code_postal": 59552,
    "date_ouverture": "2019-01-29",
    "numero_dossier": "1234/R11",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "LAMBRES LEZ DOUAI",
  },
  Object {
    "annee": 1998,
    "civilite": "F",
    "code_postal": 59500,
    "date_ouverture": "2018-12-20",
    "numero_dossier": "1234/R12",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "DOUAI",
  },
  Object {
    "annee": 1963,
    "civilite": "F",
    "code_postal": 59220,
    "date_ouverture": "2016-11-08",
    "numero_dossier": "1234/R13",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "DENAIN",
  },
  Object {
    "annee": 1925,
    "civilite": "F",
    "code_postal": 59500,
    "date_ouverture": "2015-07-21",
    "numero_dossier": "1234/R14",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "DOUAI",
  },
  Object {
    "annee": 1926,
    "civilite": "F",
    "code_postal": 59490,
    "date_ouverture": "2018-07-05",
    "numero_dossier": "1234/R15",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "SOMAIN",
  },
  Object {
    "annee": 1930,
    "civilite": "F",
    "code_postal": 59287,
    "date_ouverture": "2018-02-20",
    "numero_dossier": "1234/R16",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "LEWARDE",
  },
  Object {
    "annee": 1968,
    "civilite": "F",
    "code_postal": 59187,
    "date_ouverture": "2018-10-12",
    "numero_dossier": "1234/R17",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "DECHY",
  },
  Object {
    "annee": 1935,
    "civilite": "F",
    "code_postal": 59187,
    "date_ouverture": "2017-01-19",
    "numero_dossier": "1234/R18",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "DECHY",
  },
  Object {
    "annee": 1931,
    "civilite": "F",
    "code_postal": 59500,
    "date_ouverture": "2019-01-31",
    "numero_dossier": "1234/R19",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "DOUAI",
  },
  Object {
    "annee": 1967,
    "civilite": "F",
    "code_postal": 59259,
    "date_ouverture": "2019-01-29",
    "numero_dossier": "1234/R20",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "LECLUSE",
  },
  Object {
    "annee": 1946,
    "civilite": "F",
    "code_postal": 59179,
    "date_ouverture": "2015-09-22",
    "numero_dossier": "1234/R21",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "FENAIN",
  },
  Object {
    "annee": 1944,
    "civilite": "F",
    "code_postal": 59187,
    "date_ouverture": "2018-01-30",
    "numero_dossier": "1234/R22",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "DECHY",
  },
  Object {
    "annee": 1956,
    "civilite": "H",
    "code_postal": 59500,
    "date_ouverture": "2018-01-30",
    "numero_dossier": "1234/R23",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "DOUAI",
  },
  Object {
    "annee": 1929,
    "civilite": "F",
    "code_postal": 59167,
    "date_ouverture": "2016-10-26",
    "numero_dossier": "1234/R24",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "LALLAING",
  },
  Object {
    "annee": 1967,
    "civilite": "F",
    "code_postal": 59500,
    "date_ouverture": "2018-10-30",
    "numero_dossier": "1234/R25",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "DOUAI",
  },
  Object {
    "annee": 1922,
    "civilite": "F",
    "code_postal": 59500,
    "date_ouverture": "2017-02-22",
    "numero_dossier": "1234/R26",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "DOUAI",
  },
  Object {
    "annee": 1966,
    "civilite": "H",
    "code_postal": 59194,
    "date_ouverture": "2017-07-21",
    "numero_dossier": "1234/R27",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "RACHES",
  },
  Object {
    "annee": 1957,
    "civilite": "H",
    "code_postal": 59151,
    "date_ouverture": "2017-11-21",
    "numero_dossier": "1234/R28",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "ARLEUX",
  },
  Object {
    "annee": 1933,
    "civilite": "H",
    "code_postal": 59146,
    "date_ouverture": "2017-11-21",
    "numero_dossier": "1234/R29",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "PECQUENCOURT",
  },
  Object {
    "annee": 1945,
    "civilite": "H",
    "code_postal": 59490,
    "date_ouverture": "2019-02-08",
    "numero_dossier": "1234/R30",
    "residence": "En établissement",
    "type": "Sauvegarde de justice",
    "ville": "SOMAIN",
  },
  Object {
    "annee": 1956,
    "civilite": "H",
    "code_postal": 59500,
    "date_ouverture": "2016-09-23",
    "numero_dossier": "1234/R31",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "DOUAI",
  },
  Object {
    "annee": 1943,
    "civilite": "F",
    "code_postal": 59187,
    "date_ouverture": "2018-09-27",
    "numero_dossier": "1234/R32",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "DECHY",
  },
  Object {
    "annee": 1935,
    "civilite": "F",
    "code_postal": 59500,
    "date_ouverture": "2015-06-18",
    "numero_dossier": "1234/R33",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "DOUAI",
  },
  Object {
    "annee": 1928,
    "civilite": "H",
    "code_postal": 59247,
    "date_ouverture": "2019-02-26",
    "numero_dossier": "1234/R34",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "FECHAIN",
  },
  Object {
    "annee": 1936,
    "civilite": "F",
    "code_postal": 59247,
    "date_ouverture": "2019-02-26",
    "numero_dossier": "1234/R35",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "FECHAIN",
  },
  Object {
    "annee": 1946,
    "civilite": "H",
    "code_postal": 59450,
    "date_ouverture": "2018-11-27",
    "numero_dossier": "1234/R36",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "SIN LE NOBLE",
  },
  Object {
    "annee": 1923,
    "civilite": "F",
    "code_postal": 59500,
    "date_ouverture": "2018-01-30",
    "numero_dossier": "1234/R37",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "DOUAI",
  },
  Object {
    "annee": 1931,
    "civilite": "F",
    "code_postal": 59182,
    "date_ouverture": "2018-11-07",
    "numero_dossier": "1234/R38",
    "residence": "En établissement",
    "type": "Mesure ad hoc",
    "ville": "MONTIGNY EN OSTREVENT",
  },
  Object {
    "annee": 1967,
    "civilite": "H",
    "code_postal": 59151,
    "date_ouverture": "2018-02-20",
    "numero_dossier": "1234/R39",
    "residence": "A Domicile",
    "type": "Curatelle",
    "ville": "HAMEL",
  },
  Object {
    "annee": 1963,
    "civilite": "F",
    "code_postal": 59151,
    "date_ouverture": "2017-01-19",
    "numero_dossier": "1234/R40",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "HAMEL",
  },
  Object {
    "annee": 1957,
    "civilite": "F",
    "code_postal": 59500,
    "date_ouverture": "2015-06-01",
    "numero_dossier": "1234/R41",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "DOUAI",
  },
]
`;

exports[`fix various invalid data 1.3 should import correctly 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`fix various invalid data 1.4 should import correctly 1`] = `
Array [
  Object {
    "annee": 1938,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2014-08-28",
    "numero_dossier": "R123/00001",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1922,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2011-11-18",
    "numero_dossier": "R123/00002",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1944,
    "civilite": "H",
    "code_postal": 59100,
    "date_ouverture": "2011-05-31",
    "numero_dossier": "R123/00003",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1936,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2018-05-17",
    "numero_dossier": "R123/00004",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1929,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2019-01-10",
    "numero_dossier": "R123/00005",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1954,
    "civilite": "H",
    "code_postal": 59100,
    "date_ouverture": "2017-10-19",
    "numero_dossier": "R123/00006",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1942,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2018-07-12",
    "numero_dossier": "R123/00007",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1952,
    "civilite": "H",
    "code_postal": 59100,
    "date_ouverture": "2012-11-16",
    "numero_dossier": "R123/00008",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1942,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2018-11-26",
    "numero_dossier": "R123/00009",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1930,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2014-09-02",
    "numero_dossier": "R123/00010",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1939,
    "civilite": "H",
    "code_postal": 59100,
    "date_ouverture": "2017-11-27",
    "numero_dossier": "R123/00011",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1925,
    "civilite": "H",
    "code_postal": 59100,
    "date_ouverture": "2011-11-21",
    "numero_dossier": "R123/00012",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1931,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2017-04-10",
    "numero_dossier": "R123/00013",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1931,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2018-05-17",
    "numero_dossier": "R123/00014",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1948,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2016-06-23",
    "numero_dossier": "R123/00015",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1937,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2012-09-03",
    "numero_dossier": "R123/00016",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1931,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2016-03-03",
    "numero_dossier": "R123/00017",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1947,
    "civilite": "H",
    "code_postal": 59100,
    "date_ouverture": "2016-06-23",
    "numero_dossier": "R123/00018",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1945,
    "civilite": "H",
    "code_postal": 59100,
    "date_ouverture": "2017-07-05",
    "numero_dossier": "R123/00019",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1914,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2011-09-27",
    "numero_dossier": "R123/00020",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1933,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2016-10-25",
    "numero_dossier": "R123/00021",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1931,
    "civilite": "H",
    "code_postal": 59100,
    "date_ouverture": "2018-06-28",
    "numero_dossier": "R123/00022",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1953,
    "civilite": "H",
    "code_postal": 59100,
    "date_ouverture": "2012-09-28",
    "numero_dossier": "R123/00023",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1933,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2018-12-07",
    "numero_dossier": "R123/00024",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1956,
    "civilite": "H",
    "code_postal": 59100,
    "date_ouverture": "2018-03-22",
    "numero_dossier": "R123/00025",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1936,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2018-05-03",
    "numero_dossier": "R123/00026",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1944,
    "civilite": "F",
    "code_postal": 59100,
    "date_ouverture": "2016-06-23",
    "numero_dossier": "R123/00027",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Roubaix",
  },
  Object {
    "annee": 1936,
    "civilite": "H",
    "code_postal": 59100,
    "date_ouverture": "2018-12-07",
    "numero_dossier": "R123/00028",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Roubaix",
  },
]
`;

exports[`fix various invalid data 1.4 should import correctly 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`fix various invalid data 1.5 should import correctly 1`] = `
Array [
  Object {
    "annee": 1936,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1972-12-19",
    "numero_dossier": "AAAA1",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1939,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1972-11-16",
    "numero_dossier": "AAAA2",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1932,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2018-07-12",
    "numero_dossier": "AAAA3",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1950,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "2000-06-14",
    "numero_dossier": "AAAA4",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1934,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "2007-09-12",
    "numero_dossier": "AAAA5",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1936,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1981-11-19",
    "numero_dossier": "AAAA6",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1948,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2008-06-20",
    "numero_dossier": "AAAA7",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1935,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1973-01-25",
    "numero_dossier": "AAAA8",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1952,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "1987-06-10",
    "numero_dossier": "AAAA9",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1937,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1976-02-10",
    "numero_dossier": "AAAA10",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1947,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1978-04-27",
    "numero_dossier": "AAAA11",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1931,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2015-11-04",
    "numero_dossier": "AAAA12",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1931,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "2016-11-18",
    "numero_dossier": "AAAA13",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1940,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2017-05-31",
    "numero_dossier": "AAAA14",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1931,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "1970-04-17",
    "numero_dossier": "AAAA15",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1944,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2009-11-17",
    "numero_dossier": "AAAA16",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1941,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1973-10-30",
    "numero_dossier": "AAAA17",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1941,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1995-05-19",
    "numero_dossier": "AAAA18",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1946,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1999-10-27",
    "numero_dossier": "AAAA19",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1936,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2002-12-02",
    "numero_dossier": "AAAA20",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1943,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1982-02-23",
    "numero_dossier": "AAAA21",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1935,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "1996-03-06",
    "numero_dossier": "AAAA22",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1945,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "2005-07-11",
    "numero_dossier": "AAAA23",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1942,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "1988-09-20",
    "numero_dossier": "AAAA24",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1946,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "2008-01-17",
    "numero_dossier": "AAAA25",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1937,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2016-12-16",
    "numero_dossier": "AAAA26",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1951,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "2009-05-06",
    "numero_dossier": "AAAA27",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1947,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1971-12-15",
    "numero_dossier": "AAAA28",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1937,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1996-10-17",
    "numero_dossier": "AAAA29",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1943,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "2018-12-17",
    "numero_dossier": "AAAA30",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1932,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2016-01-22",
    "numero_dossier": "AAAA31",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1933,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2018-10-24",
    "numero_dossier": "AAAA32",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1920,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "2011-11-15",
    "numero_dossier": "AAAA33",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1927,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2011-11-15",
    "numero_dossier": "AAAA34",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1933,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2017-09-26",
    "numero_dossier": "AAAA35",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1929,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2007-09-12",
    "numero_dossier": "AAAA36",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1930,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2015-01-26",
    "numero_dossier": "AAAA37",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1941,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "1982-11-26",
    "numero_dossier": "AAAA38",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1947,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2013-03-28",
    "numero_dossier": "AAAA39",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1944,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2019-02-11",
    "numero_dossier": "AAAA40",
    "residence": "En établissement",
    "type": "Sauvegarde de justice",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1945,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2005-06-13",
    "numero_dossier": "AAAA41",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1929,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2011-11-25",
    "numero_dossier": "AAAA42",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1943,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "1984-09-27",
    "numero_dossier": "AAAA43",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1960,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "2016-11-29",
    "numero_dossier": "AAAA44",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1946,
    "civilite": "H",
    "code_postal": 59280,
    "date_ouverture": "2011-06-21",
    "numero_dossier": "AAAA45",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1958,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2017-12-21",
    "numero_dossier": "AAAA46",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1933,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "2009-04-15",
    "numero_dossier": "AAAA47",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1939,
    "civilite": "F",
    "code_postal": 59280,
    "date_ouverture": "1982-11-21",
    "numero_dossier": "AAAA48",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Armentieres",
  },
  Object {
    "annee": 1934,
    "civilite": "F",
    "code_postal": 59116,
    "date_ouverture": "2009-05-29",
    "numero_dossier": "AAAA49",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Houplines",
  },
  Object {
    "annee": 1952,
    "civilite": "F",
    "code_postal": 59116,
    "date_ouverture": "1996-04-26",
    "numero_dossier": "AAAA50",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Houplines",
  },
]
`;

exports[`fix various invalid data 1.5 should import correctly 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`fix various invalid data should fix column names 1`] = `
Array [
  Object {
    "annee": 1943,
    "civilite": "F",
    "code_postal": 59320,
    "date_ouverture": "2018-07-03",
    "numero_dossier": "99/07460",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "haubourdin",
  },
  Object {
    "annee": 1954,
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2014-03-28",
    "numero_dossier": "13/00988",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1948",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2018-07-30",
    "numero_dossier": "18/00594",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1945",
    "civilite": "F",
    "code_postal": 59139,
    "date_ouverture": "2019-01-25",
    "numero_dossier": "18/00408",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "wattignies",
  },
  Object {
    "annee": "1939",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2017-06-22",
    "numero_dossier": "17/00177",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1930",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2015-03-05",
    "numero_dossier": "90/03580",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1949",
    "civilite": "H",
    "code_postal": 59139,
    "date_ouverture": "2017-12-22",
    "numero_dossier": "12/00812",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "wattignies",
  },
  Object {
    "annee": "1936",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2006-09-05",
    "numero_dossier": "05/01208",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1920",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2018-10-24",
    "numero_dossier": "18/00598",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1932",
    "civilite": "F",
    "code_postal": 59139,
    "date_ouverture": "2010-10-20",
    "numero_dossier": "10/00104",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1934",
    "civilite": "F",
    "code_postal": 59320,
    "date_ouverture": "2019-01-30",
    "numero_dossier": "14/00442",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "haubourdin",
  },
  Object {
    "annee": "1946",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2019-01-15",
    "numero_dossier": "18/01467",
    "residence": "En établissement",
    "type": "Sauvegarde de justice",
    "ville": "seclin",
  },
  Object {
    "annee": "1933",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2017-03-27",
    "numero_dossier": "16/01264",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1933",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2016-05-30",
    "numero_dossier": "15/00802",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1936",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2015-01-27",
    "numero_dossier": "14/00774",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1923",
    "civilite": "H",
    "code_postal": 59139,
    "date_ouverture": "1986-12-09",
    "numero_dossier": "12/05498",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "wattignies",
  },
  Object {
    "annee": "1942",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2019-02-07",
    "numero_dossier": "17/01237",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1945",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2009-01-24",
    "numero_dossier": "08/0534",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1922",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2012-02-27",
    "numero_dossier": "11/00974",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1943",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2015-02-12",
    "numero_dossier": "15/00081",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1936",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2017-03-13",
    "numero_dossier": "16/00789",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1921",
    "civilite": "H",
    "code_postal": 59120,
    "date_ouverture": "2018-12-17",
    "numero_dossier": "18/00670",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "loos",
  },
  Object {
    "annee": "1929",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2015-01-27",
    "numero_dossier": "14/00761",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1946",
    "civilite": "H",
    "code_postal": 59139,
    "date_ouverture": "2007-09-12",
    "numero_dossier": "07/00071",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "wattignies",
  },
  Object {
    "annee": "1926",
    "civilite": "F",
    "code_postal": 59320,
    "date_ouverture": "2018-06-13",
    "numero_dossier": "06/02429",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "haubourdin",
  },
  Object {
    "annee": "1947",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2013-02-27",
    "numero_dossier": "12/00996",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1933",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2017-08-01",
    "numero_dossier": "17/00720",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1953",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2017-02-27",
    "numero_dossier": "16/00504",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1938",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2018-12-19",
    "numero_dossier": "18/01077",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1948",
    "civilite": "H",
    "code_postal": 59320,
    "date_ouverture": "2018-06-13",
    "numero_dossier": "17/01363",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "haubourdin",
  },
  Object {
    "annee": "1936",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2016-03-31",
    "numero_dossier": "15/01265",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1927",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2015-01-06",
    "numero_dossier": "14/01014",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1922",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2013-01-31",
    "numero_dossier": "12/00605",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1942",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2018-10-15",
    "numero_dossier": "97/06510",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1923",
    "civilite": "F",
    "code_postal": 62220,
    "date_ouverture": "2018-05-28",
    "numero_dossier": "18/00096",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "carvin",
  },
]
`;

exports[`fix various invalid data should fix column names 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`no column headers should reject when no header 1`] = `Array []`;

exports[`no column headers should reject when no header 2`] = `
Object {
  "errors": Object {
    "erreur": Array [
      "Aucune ligne importée",
    ],
  },
}
`;

exports[`read: rename columns should rename approximative columns 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": undefined,
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 2010,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "annee": null,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
    "type": "Sauvegarde de justice",
  },
  Object {
    "annee": 1998,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
    "type": "Mesure ad hoc",
  },
  Object {
    "annee": null,
    "civilite": undefined,
    "date_ouverture": "1999-05-22",
  },
  Object {
    "annee": null,
    "civilite": undefined,
    "date_ouverture": "1989-09-22",
  },
]
`;

exports[`read: rename columns should rename approximative columns 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`valid civilites should normalize civilites 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": "H",
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 2010,
    "civilite": "H",
    "date_ouverture": "2010-05-22",
  },
  Object {
    "annee": null,
    "civilite": "F",
    "date_ouverture": "2010-05-22",
    "type": "Sauvegarde de justice",
  },
  Object {
    "annee": 1998,
    "civilite": "F",
    "date_ouverture": "2010-05-22",
    "type": "Mesure ad hoc",
  },
  Object {
    "annee": null,
    "civilite": undefined,
    "date_ouverture": "1999-05-22",
  },
  Object {
    "annee": null,
    "civilite": undefined,
    "date_ouverture": "1989-09-22",
  },
]
`;

exports[`valid civilites should normalize civilites 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`validate: invalid data should fail invalid-annee.xlsx should be invalid 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": undefined,
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 4000,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
]
`;

exports[`validate: invalid data should fail invalid-annee.xlsx should be invalid 2`] = `
Object {
  "errors": Object {
    "Ligne 3": Array [
      "Année non valide : \\"4000\\"",
    ],
  },
}
`;

exports[`validate: invalid data should fail invalid-date.xlsx should be invalid 1`] = `
Array [
  Object {
    "annee": null,
    "civilite": undefined,
    "date_ouverture": "2015-12-25",
    "type": "Curatelle",
  },
  Object {
    "annee": null,
    "civilite": undefined,
    "date_ouverture": "Invalid Date",
    "type": "Tutelle",
  },
  Object {
    "annee": null,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
    "type": "Tutelle",
  },
]
`;

exports[`validate: invalid data should fail invalid-date.xlsx should be invalid 2`] = `
Object {
  "errors": Object {
    "Ligne 3": Array [
      "Date d'ouverture non valide : \\"Invalid Date\\"",
    ],
  },
}
`;

exports[`validate: valid data should NOT fail valid1.xlsx should be valid 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": undefined,
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 2010,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "annee": null,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "annee": 1998,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "annee": null,
    "civilite": undefined,
    "date_ouverture": "1999-05-22",
  },
  Object {
    "annee": null,
    "civilite": undefined,
    "date_ouverture": "1989-09-22",
  },
]
`;

exports[`validate: valid data should NOT fail valid1.xlsx should be valid 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`validate: valid data should NOT fail valid2.xlsx should be valid 1`] = `
Array [
  Object {
    "annee": 2003,
    "civilite": "H",
    "code_postal": 57100,
    "date_ouverture": "2017-11-02",
    "numero_dossier": "RG20136Q",
    "residence": "A Domicile",
    "type": "Tutelle",
    "ville": "thionville",
  },
  Object {
    "annee": 2004,
    "civilite": "H",
    "code_postal": 75005,
    "date_ouverture": "2016-12-03",
    "numero_dossier": "1236HPLY",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "paris",
  },
  Object {
    "annee": 2009,
    "civilite": "F",
    "code_postal": 85000,
    "date_ouverture": "2010-08-05",
    "numero_dossier": "meourg120",
    "residence": "A Domicile",
    "type": "Sauvegarde de justice",
    "ville": "marseille",
  },
]
`;

exports[`validate: valid data should NOT fail valid2.xlsx should be valid 2`] = `
Object {
  "errors": undefined,
}
`;
